--- a/package.json
+++ b/package.json
@@ -6,15 +6,21 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "export": "next build && next export"
   },
   "dependencies": {
-    "react": "^18",
-    "react-dom": "^18",
-    "next": "14.2.5"
+    "@react-google-maps/api": "^2.19.3",
+    "aos": "^2.3.4",
+    "autoprefixer": "^10.4.20",
+    "next": "14.2.5",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-parallax": "^3.5.1",
+    "react-scroll-parallax": "^3.4.5"
   },
   "devDependencies": {
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1"
+    "postcss": "^8.4.40",
+    "tailwindcss": "^3.4.7"
   }
 }
