--- a/package.json
+++ b/package.json
@@ -2,20 +2,19 @@
   "name": "my-law-firm-landing",
   "version": "0.1.0",
   "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint",
-    "export": "next build && next export"
-  },
+"scripts": {
+  "dev": "next dev",
+  "build": "next build",
+  "start": "next start",
+  "lint": "next lint"
+},
   "dependencies": {
     "@react-google-maps/api": "^2.19.3",
     "aos": "^2.3.4",
     "autoprefixer": "^10.4.20",
     "next": "14.2.5",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-parallax": "^3.5.1",
     "react-scroll-parallax": "^3.4.5"
   },
