--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "dev": "next dev",
   "build": "next build",
   "start": "next start",
-  "lint": "next lint"
+  "lint": "next lint",
+  "export": "next export"
 },
   "dependencies": {
     "@react-google-maps/api": "^2.19.3",
