--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "next": "14.2.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.3.0",
     "react-parallax": "^3.5.1",
     "react-scroll-parallax": "^3.4.5"
   },
